project/stage/testing/semantic/semantic_tests/reject/3.2.2.e_invalid.ul.archived
void main() {
    string s1;
    int i;
    boolean a;
    
    a = (c == i);
}